[gd_scene format=4 uid="uid://dba7fnx3jcdx0"]

[ext_resource type="Script" uid="uid://dudy12clsa3st" path="res://Scripts/gameController.gd" id="1_tt5f1"]
[ext_resource type="Script" path="res://Scenes/sprites.gd" id="2_8wkh3"]
[ext_resource type="Script" path="res://Scenes/gameCamera.gd" id="2_72gy5"]
[ext_resource type="Script" uid="uid://c4ybvudmv46xy" path="res://Scripts/AnimationScripts/corridor.gd" id="2_853f1"]
[ext_resource type="Texture2D" uid="uid://d24sestwwo6d2" path="res://Assets/templateassets/gurney.png" id="3_8um5k"]
[ext_resource type="Texture2D" uid="uid://d2jdvu17oykkj" path="res://Assets/templateassets/doctor.png" id="3_ghw46"]
[ext_resource type="Texture2D" uid="uid://0rnj165pvo8g" path="res://Assets/templateassets/doctor2.png" id="4_df05h"]
[ext_resource type="Texture2D" uid="uid://cfqgnaeaeegi1" path="res://Assets/templateassets/gurneyp1.png" id="4_xim88"]
[ext_resource type="Texture2D" uid="uid://dr73my0bnfs1l" path="res://Assets/templateassets/GA.png" id="5_cmrfp"]
[ext_resource type="Script" uid="uid://cnw3vfch5p8gi" path="res://Scripts/AnimationScripts/doctor.gd" id="5_df05h"]
[ext_resource type="Texture2D" uid="uid://ce8kqa3o0rfxk" path="res://Assets/templateassets/GA2.png" id="6_loo7a"]
[ext_resource type="Script" uid="uid://1bgspcq08ya6" path="res://Scripts/AnimationScripts/GuardianP2.gd" id="7_loo7a"]
[ext_resource type="PackedScene" uid="uid://bqwqe56jvwyb8" path="res://Scenes/interact_ui_test.tscn" id="11_awugs"]
[ext_resource type="Script" uid="uid://l07lwxlp55st" path="res://Scripts/AtiInteractionStuff/PlantBitch.gd" id="11_vv4ip"]
[ext_resource type="Texture2D" uid="uid://q2gi2vcbvvi3" path="res://Assets/kenney_sketch-desert/Tiles/tree_N.png" id="12_awugs"]
[ext_resource type="PackedScene" uid="uid://bna0cgl67jtr" path="res://Scenes/corridor_block.tscn" id="14_2jq6c"]
[ext_resource type="Texture2D" uid="uid://bp0s20euojoho" path="res://Assets/kenney_isometric-miniature-prototype/Characters/Human/Human_0_Run0.png" id="16_8wkh3"]
[ext_resource type="Script" uid="uid://6hcghq2oq412" path="res://Scenes/boardxd.gd" id="16_m56cs"]
[ext_resource type="PackedScene" uid="uid://bl5mw66w8hpb8" path="res://Scenes/board_b.tscn" id="19_5kvh0"]
[ext_resource type="Script" uid="uid://7lwsmpl5whmq" path="res://Scenes/boards.gd" id="19_l1qm6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xim88"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8um5k")
}, {
"duration": 1.0,
"texture": ExtResource("4_xim88")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xim88"]
properties/0/path = NodePath(".:frame")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="Animation" id="Animation_0pknb"]
resource_name = "Cutscene1"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1407, -704)]
}

[sub_resource type="Animation" id="Animation_bo24s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_72gy5"]
_data = {
&"Cutscene1": SubResource("Animation_0pknb"),
&"RESET": SubResource("Animation_bo24s")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_if7li"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_cmrfp")
}, {
"duration": 1.0,
"texture": ExtResource("6_loo7a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_loo7a"]
properties/0/path = NodePath(".:frame")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:visible")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:position")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="SpriteFrames" id="SpriteFrames_8um5k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ghw46")
}, {
"duration": 1.0,
"texture": ExtResource("4_df05h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c7wuu"]
radius = 15.0
height = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jq6c"]
size = Vector2(77, 88.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bktvt"]
size = Vector2(33.329224, 54.962524)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1qm6"]
size = Vector2(50.00055, 75.40314)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1nkd0"]
size = Vector2(34.58023, 49.262756)

[sub_resource type="LabelSettings" id="LabelSettings_awugs"]
font_size = 32

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_c7wuu"]
properties/0/path = NodePath("/root/Game:allplayersconnected")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Game" type="Node2D" unique_id=1085711166]
script = ExtResource("1_tt5f1")

[node name="Sprites" type="Node2D" parent="." unique_id=486962340]
z_index = 15
script = ExtResource("2_8wkh3")

[node name="Gurney" type="Node2D" parent="Sprites" unique_id=629475395]
scale = Vector2(1.5, 1.5)

[node name="GurneyP1" type="AnimatedSprite2D" parent="Sprites/Gurney" unique_id=278456164]
z_index = 1
position = Vector2(86, -12.666667)
sprite_frames = SubResource("SpriteFrames_xim88")

[node name="P1Sync" type="MultiplayerSynchronizer" parent="Sprites/Gurney/GurneyP1" unique_id=673978986]
replication_config = SubResource("SceneReplicationConfig_xim88")

[node name="Cutscenes" type="AnimationPlayer" parent="Sprites/Gurney" unique_id=2104473728]
libraries/ = SubResource("AnimationLibrary_72gy5")

[node name="GuardianP2" type="Node2D" parent="Sprites" unique_id=543062409]

[node name="guaP2" type="AnimatedSprite2D" parent="Sprites/GuardianP2" unique_id=877741442]
position = Vector2(34, 25)
sprite_frames = SubResource("SpriteFrames_if7li")
script = ExtResource("7_loo7a")

[node name="P2Sync" type="MultiplayerSynchronizer" parent="Sprites/GuardianP2/guaP2" unique_id=558339106]
replication_config = SubResource("SceneReplicationConfig_loo7a")

[node name="Doctors" type="Node2D" parent="Sprites" unique_id=1418592837]
scale = Vector2(3, 3)

[node name="Doctor" type="AnimatedSprite2D" parent="Sprites/Doctors" unique_id=1448016335]
position = Vector2(41, -23.666666)
sprite_frames = SubResource("SpriteFrames_8um5k")
script = ExtResource("5_df05h")

[node name="Doctor2" type="AnimatedSprite2D" parent="Sprites/Doctors" unique_id=150751359]
z_index = 2
position = Vector2(64.666664, -8.333334)
sprite_frames = SubResource("SpriteFrames_8um5k")
script = ExtResource("5_df05h")

[node name="Doctor3" type="AnimatedSprite2D" parent="Sprites/Doctors" unique_id=1921528034]
z_index = 2
position = Vector2(31.666666, 8.999999)
sprite_frames = SubResource("SpriteFrames_8um5k")
script = ExtResource("5_df05h")

[node name="Doctor4" type="AnimatedSprite2D" parent="Sprites/Doctors" unique_id=1915304725]
position = Vector2(10.666666, -12)
sprite_frames = SubResource("SpriteFrames_8um5k")
script = ExtResource("5_df05h")

[node name="Cutscenes" type="AnimationPlayer" parent="Sprites/Doctors" unique_id=1529491888]
libraries/ = SubResource("AnimationLibrary_72gy5")

[node name="Map" type="Node2D" parent="." unique_id=841442765]

[node name="P1Lobby" type="Node2D" parent="Map" unique_id=1436873318]
scale = Vector2(0.5, 0.5)

[node name="Lobby" parent="Map/P1Lobby" unique_id=891766374 instance=ExtResource("14_2jq6c")]
z_index = 9
position = Vector2(3714, -1856)
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAD+/wIABgAAAAAAAAD+/wMABgAAAAAAAAD9/wMAAwAAAAMAAAD9/wQAAwAAAAMAAAD+/wQAAwAAAAMAAAD//wQABgAAAAAAAAD8/wUAAwAAAAMAAAD8/wYAAwAAAAMAAAD9/wUAAwAAAAMAAAD9/wYAAwAAAAMAAAD+/wUAAwAAAAMAAAD+/wYAAwAAAAMAAAD7/wgAAwAAAAMAAAD7/wkAAwAAAAMAAAD8/wgAAwAAAAMAAAD8/wkAAwAAAAMAAAD7/wcAAwAAAAMAAAD8/wcAAwAAAAMAAAD9/wcAAwAAAAMAAAD9/wgAAwAAAAMAAAD8/woAAwAAAAMAAAD6/wkAAwAAAAMAAAD6/woAAwAAAAMAAAD6/wsAAwAAAAMAAAD7/woAAwAAAAMAAAD7/wsAAwAAAAMAAAD7/wwAAwAAAAMAAAD5/wkAAwAAAAMAAAD6/wcAAwAAAAMAAAD6/wgAAwAAAAMAAAD7/wYAAwAAAAMAAAD7/wUAAwAAAAMAAAD8/wQAAwAAAAMAAAD8/wMAAwAAAAMAAAD9/wIAAwAAAAMAAAD9/wEABgAAAAAAAAD5/wgAAwAAAAMAAAD7/w0AAwAAAAMAAAD8/w4AAwAAAAMAAAD5/wcAAwAAAAMAAAD8/wwAAwAAAAMAAAD8/w0AAwAAAAMAAAD6/wYAAwAAAAMAAAD8/wsAAwAAAAMAAAD9/wwAAwAAAAMAAAD5/wUAAwAAAAMAAAD5/wYAAwAAAAMAAAD4/wcAAwAAAAMAAAD6/wQAAwAAAAMAAAD6/wUAAwAAAAMAAAD9/wkAAwAAAAMAAAD9/woAAwAAAAMAAAD9/wsAAwAAAAMAAAD6/wMAAwAAAAMAAAD7/wQAAwAAAAMAAAD+/woAAwAAAAMAAAD+/wkAAwAAAAMAAAD+/wgAAwAAAAMAAAD7/wMAAwAAAAMAAAD7/wIAAwAAAAMAAAD7/wEAAwAAAAMAAAD8/wAAAwAAAAMAAAD8/wEAAwAAAAMAAAD+/wcAAwAAAAMAAAD//wYAAwAAAAMAAAD//wgAAwAAAAMAAAD//wcAAwAAAAMAAAD8/wIAAwAAAAMAAAD4/wYABQAAAAAAAAD4/wUABQAAAAAAAAD5/wQABQAAAAAAAAD5/wMABQAAAAAAAAD6/wIABQAAAAAAAAD6/wEABQAAAAAAAAD7/wAABQAAAAAAAAD7////BQAAAAAAAAD8////BgAAAAAAAAD9/wAABgAAAAAAAAD//wUABgAAAAAAAAAAAAYABgAAAAAAAAAAAAcABgAAAAAAAAD8/w8AAwAAAAMAAAD9/w4AAwAAAAMAAAD9/w0AAwAAAAMAAAD+/wwAAwAAAAMAAAD+/wsAAwAAAAMAAAD//woAAwAAAAMAAAD//wkAAwAAAAMAAAAAAAgAAwAAAAMAAAA=")
script = null

[node name="BottomWallRight" parent="Map/P1Lobby" unique_id=82911060 instance=ExtResource("14_2jq6c")]
position = Vector2(3844, -1792)
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAD8/w4ABQAAAAAAAAD8/w0ABQAAAAAAAAD9/wwABQAAAAAAAAD9/wsABQAAAAAAAAD+/woABQAAAAAAAAD+/wkABQAAAAAAAAD//wgABQAAAAAAAAD//wcABQAAAAAAAAA=")
script = null

[node name="BottomWallLeft" parent="Map/P1Lobby" unique_id=990258885 instance=ExtResource("14_2jq6c")]
position = Vector2(3714, -1856)
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAD6/woABgAAAAAAAAD7/wwABgAAAAAAAAD5/wkABgAAAAAAAAD5/wgABgAAAAAAAAD7/w0ABgAAAAAAAAD8/w4ABgAAAAAAAAD4/wcABgAAAAAAAAD8/w8ABgAAAAAAAAA=")
script = null

[node name="CorridorBlock" parent="Map/P1Lobby" unique_id=1759295797 instance=ExtResource("14_2jq6c")]
position = Vector2(898, -448)
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAAAAP//AwAAAAMAAAAAAP7/AwAAAAMAAAABAAAAAwAAAAMAAAD/////AwAAAAMAAAAAAAAAAwAAAAMAAAAAAAEAAwAAAAMAAAAAAP3/AwAAAAMAAAABAP3/AwAAAAMAAAABAP7/AwAAAAMAAAABAP//AwAAAAMAAAACAP3/AwAAAAMAAAACAP7/AwAAAAMAAAABAPv/AwAAAAMAAAACAPv/AwAAAAMAAAABAPz/AwAAAAMAAAACAPz/AwAAAAMAAAACAPr/AwAAAAMAAAADAPr/AwAAAAMAAAADAPv/AwAAAAMAAAADAPz/AwAAAAMAAAACAPn/AwAAAAMAAAADAPn/AwAAAAMAAAADAPj/AwAAAAMAAAAEAPj/AwAAAAMAAAAEAPn/AwAAAAMAAAAEAPr/AwAAAAMAAAADAPf/AwAAAAMAAAAEAPf/AwAAAAMAAAAEAPb/AwAAAAMAAAAFAPb/AwAAAAMAAAAFAPf/AwAAAAMAAAAFAPj/AwAAAAMAAAAEAPX/AwAAAAMAAAD//wAAAwAAAAMAAAAAAAIAAwAAAAMAAAD//wEAAwAAAAMAAAD+/wEAAwAAAAMAAAD+/wIAAwAAAAMAAAD//wIAAwAAAAMAAAD+/wMAAwAAAAMAAAD//wMAAwAAAAMAAAD9/wMAAwAAAAMAAAD9/wQAAwAAAAMAAAD+/wQAAwAAAAMAAAD//wQAAwAAAAMAAAD8/wUAAwAAAAMAAAD8/wYAAwAAAAMAAAD9/wUAAwAAAAMAAAD9/wYAAwAAAAMAAAD+/wUAAwAAAAMAAAD+/wYAAwAAAAMAAAD7/wgAAwAAAAMAAAD7/wkAAwAAAAMAAAD8/wgAAwAAAAMAAAD8/wkAAwAAAAMAAAD7/wcAAwAAAAMAAAD8/wcAAwAAAAMAAAD9/wcAAwAAAAMAAAD9/wgAAwAAAAMAAAD8/woAAwAAAAMAAAD6/wkAAwAAAAMAAAD6/woAAwAAAAMAAAD6/wsAAwAAAAMAAAD7/woAAwAAAAMAAAD7/wsAAwAAAAMAAAD7/wwAAwAAAAMAAAD5/wkABQAAAAAAAAD6/wcABQAAAAAAAAD6/wgABQAAAAAAAAD7/wYABQAAAAAAAAD7/wUABQAAAAAAAAD8/wQABQAAAAAAAAD8/wMABQAAAAAAAAD9/wIABQAAAAAAAAD9/wEABQAAAAAAAAD+/wAABQAAAAAAAAD+////BQAAAAAAAAD///7/BQAAAAAAAAD///3/BQAAAAAAAAAAAPz/BQAAAAAAAAAAAPv/BQAAAAAAAAABAPr/BQAAAAAAAAABAPn/BQAAAAAAAAACAPj/BQAAAAAAAAACAPf/BQAAAAAAAAADAPb/BQAAAAAAAAADAPX/BQAAAAAAAAAEAPT/BQAAAAAAAAAGAPj/AwAAAAAAAAAFAPn/AwAAAAAAAAAFAPr/AwAAAAAAAAAEAPv/AwAAAAAAAAAEAPz/AwAAAAAAAAADAP3/AwAAAAAAAAADAP7/AwAAAAAAAAACAP//AwAAAAAAAAACAAAAAwAAAAAAAAABAAEAAwAAAAAAAAABAAIAAwAAAAAAAAAAAAMAAwAAAAAAAAAAAAQAAwAAAAAAAAD//wUAAwAAAAAAAAD//wYAAwAAAAAAAAD+/wcAAwAAAAAAAAD+/wgAAwAAAAAAAAD9/wkAAwAAAAAAAAD9/woAAwAAAAAAAAD8/wsAAwAAAAAAAAD8/wwAAwAAAAAAAAD7/w0AAwAAAAAAAAD7/w4AAwAAAAAAAAD6/w8AAwAAAAAAAAD6/xAAAwAAAAAAAAD5/xEAAwAAAAAAAAD5/xAAAwAAAAAAAAD4/w8AAwAAAAAAAAD4/w4AAwAAAAAAAAD3/w0AAwAAAAAAAAD3/wwAAwAAAAAAAAD3/wsAAwAAAAAAAAD4/woAAwAAAAAAAAD4/wkAAwAAAAAAAAD5/wgAAwAAAAAAAAD5/wcAAwAAAAAAAAD6/wYAAwAAAAAAAAD5/wUAAwAAAAAAAAD6/wQAAwAAAAAAAAD6/wUAAwAAAAAAAAD7/wQAAwAAAAAAAAD7/wMAAwAAAAAAAAD8/wIAAwAAAAAAAAD8/wEAAwAAAAAAAAD9/wAAAwAAAAAAAAD9////AwAAAAAAAAD+//7/AwAAAAAAAAD+//3/AwAAAAAAAAD///z/AwAAAAAAAAD///v/AwAAAAAAAAAAAPr/AwAAAAAAAAAAAPn/AwAAAAAAAAABAPj/AwAAAAAAAAABAPf/AwAAAAAAAAACAPb/AwAAAAAAAAACAPX/AwAAAAAAAAADAPT/AwAAAAAAAAADAPP/AwAAAAAAAAADAPL/AwAAAAAAAAACAPH/AwAAAAAAAAADAPD/AwAAAAAAAAADAO//AwAAAAAAAAAEAO7/AwAAAAAAAAAEAO3/AwAAAAAAAAAFAOz/AwAAAAAAAAAFAOv/AwAAAAAAAAAGAOr/AwAAAAAAAAAGAOn/AwAAAAAAAAAHAOj/AwAAAAAAAAAHAOn/AwAAAAAAAAAIAOr/AwAAAAAAAAAIAOv/AwAAAAAAAAAJAOz/AwAAAAAAAAAJAO3/AwAAAAAAAAAKAO7/AwAAAAAAAAAKAO//AwAAAAAAAAALAPD/AwAAAAAAAAALAPH/AwAAAAAAAAAMAPL/AwAAAAAAAAALAPP/AwAAAAAAAAALAPT/AwAAAAAAAAAKAPX/AwAAAAAAAAAKAPb/AwAAAAAAAAAJAPf/AwAAAAAAAAAJAPj/AwAAAAAAAAAIAPn/AwAAAAAAAAAIAPr/AwAAAAAAAAAHAPv/AwAAAAAAAAAHAPr/AwAAAAAAAAAGAPn/AwAAAAAAAAA=")
script = null

[node name="CorridorBlock2" parent="Map/P1Lobby" unique_id=717100803 instance=ExtResource("14_2jq6c")]
position = Vector2(-1918, 960)
scale = Vector2(1, 1)
script = null

[node name="Corridor" type="Node2D" parent="Map" unique_id=479213647]
y_sort_enabled = true
script = ExtResource("2_853f1")

[node name="InteractablesP1" type="Node2D" parent="Map" unique_id=1049329363]
z_index = 101
y_sort_enabled = true
position = Vector2(1406, -706)

[node name="PlantBitch" type="StaticBody2D" parent="Map/InteractablesP1" unique_id=2037417954]
position = Vector2(20, -305)
script = ExtResource("11_vv4ip")
ui_scene = ExtResource("11_awugs")

[node name="InteractLabel" parent="Map/InteractablesP1/PlantBitch" unique_id=21531859 instance=ExtResource("11_awugs")]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -82.0
offset_top = 19.0
offset_right = -82.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Map/InteractablesP1/PlantBitch" unique_id=2052596960]
position = Vector2(-8, 41)
scale = Vector2(0.4929303, 0.4929303)
texture = ExtResource("12_awugs")

[node name="CollisionHitBox" type="CollisionShape2D" parent="Map/InteractablesP1/PlantBitch" unique_id=1145148362]
position = Vector2(-12.999939, 73)
shape = SubResource("CapsuleShape2D_c7wuu")

[node name="Area2D" type="Area2D" parent="Map/InteractablesP1/PlantBitch" unique_id=774640699]
position = Vector2(-15, 73)
collision_layer = 4

[node name="InteractionRange" type="CollisionShape2D" parent="Map/InteractablesP1/PlantBitch/Area2D" unique_id=1152981872]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_2jq6c")
debug_color = Color(0.9764706, 0.15686275, 0, 0.20784314)

[node name="InteractablesP2" type="Node2D" parent="Map" unique_id=1376358550]
z_index = 101
y_sort_enabled = true
position = Vector2(1406, -706)

[node name="BBoards" type="Node2D" parent="Map/InteractablesP2" unique_id=1665288612]
position = Vector2(-781, 338)

[node name="BoardB1" type="StaticBody2D" parent="Map/InteractablesP2/BBoards" unique_id=1118878982]
position = Vector2(-16, -58)
script = ExtResource("16_m56cs")
ui_scene = ExtResource("11_awugs")

[node name="InteractLabel" parent="Map/InteractablesP2/BBoards/BoardB1" unique_id=2112510270 instance=ExtResource("11_awugs")]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -82.0
offset_top = 19.0
offset_right = -82.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Map/InteractablesP2/BBoards/BoardB1" unique_id=875759258]
position = Vector2(-14, 6)
scale = Vector2(0.4929303, 0.4929303)
texture = ExtResource("16_8wkh3")

[node name="CollisionHitBox" type="CollisionShape2D" parent="Map/InteractablesP2/BBoards/BoardB1" unique_id=548872809]
position = Vector2(-22, 56)
rotation = 1.0704852
shape = SubResource("RectangleShape2D_bktvt")

[node name="Area2D" type="Area2D" parent="Map/InteractablesP2/BBoards/BoardB1" unique_id=762099002]
position = Vector2(-15, 73)
collision_layer = 4

[node name="InteractionRange" type="CollisionShape2D" parent="Map/InteractablesP2/BBoards/BoardB1/Area2D" unique_id=1781892513]
position = Vector2(0.27197266, -2.6357727)
rotation = -0.48657438
shape = SubResource("RectangleShape2D_l1qm6")
debug_color = Color(0.9764706, 0.15686275, 0, 0.20784314)

[node name="BoardB2" type="StaticBody2D" parent="Map/InteractablesP2/BBoards" unique_id=2135824397]
position = Vector2(63, -99)
script = ExtResource("16_m56cs")
ui_scene = ExtResource("11_awugs")

[node name="InteractLabel" parent="Map/InteractablesP2/BBoards/BoardB2" unique_id=1415352848 instance=ExtResource("11_awugs")]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -82.0
offset_top = 19.0
offset_right = -82.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Map/InteractablesP2/BBoards/BoardB2" unique_id=1713199226]
position = Vector2(-14, 6)
scale = Vector2(0.4929303, 0.4929303)
texture = ExtResource("16_8wkh3")

[node name="CollisionHitBox" type="CollisionShape2D" parent="Map/InteractablesP2/BBoards/BoardB2" unique_id=1069441014]
position = Vector2(-22, 57)
rotation = 1.0704852
shape = SubResource("RectangleShape2D_1nkd0")

[node name="Area2D" type="Area2D" parent="Map/InteractablesP2/BBoards/BoardB2" unique_id=1558688093]
position = Vector2(-15, 73)
collision_layer = 4

[node name="InteractionRange" type="CollisionShape2D" parent="Map/InteractablesP2/BBoards/BoardB2/Area2D" unique_id=1580016713]
position = Vector2(0.27197266, -2.6357727)
rotation = -0.48657438
shape = SubResource("RectangleShape2D_l1qm6")
debug_color = Color(0.9764706, 0.15686275, 0, 0.20784314)

[node name="MainMenuCamera" type="Camera2D" parent="." unique_id=830913481]
script = ExtResource("2_72gy5")

[node name="PlantBitchUI" type="Control" parent="MainMenuCamera" unique_id=1295420185]
visible = false
z_index = 500
layout_mode = 3
anchors_preset = 0
offset_left = -572.0
offset_top = -321.0
offset_right = -328.0
offset_bottom = -293.0
scale = Vector2(1.8992958, 9.904945)

[node name="Panel" type="Panel" parent="MainMenuCamera/PlantBitchUI" unique_id=407877368]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0530219
offset_top = 0.605758
offset_right = 1.0530243
offset_bottom = 0.60575867
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenuCamera/PlantBitchUI/Panel" unique_id=192661766]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "WOAAHHH POP UP WOOAAHH
HELP ME IM A PLANT
"
label_settings = SubResource("LabelSettings_awugs")

[node name="MainMenuHUD" type="Control" parent="MainMenuCamera" unique_id=926888057]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 190.00002
offset_top = 73.0
offset_right = 445.0
offset_bottom = 245.0
scale = Vector2(1.4896207, 1.4896207)

[node name="Panel" type="Panel" parent="MainMenuCamera/MainMenuHUD" unique_id=631519181]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenuCamera/MainMenuHUD/Panel" unique_id=642893865]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuCamera/MainMenuHUD/Panel/MarginContainer" unique_id=116422983]
layout_mode = 2

[node name="Host Game" type="Button" parent="MainMenuCamera/MainMenuHUD/Panel/MarginContainer/VBoxContainer" unique_id=1461976996]
layout_mode = 2
text = "Host Game"

[node name="Join Game" type="Button" parent="MainMenuCamera/MainMenuHUD/Panel/MarginContainer/VBoxContainer" unique_id=195431902]
layout_mode = 2
text = "Join Game
"

[node name="Boards" type="Control" parent="MainMenuCamera" unique_id=1813326408]
visible = false
z_index = 500
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("19_l1qm6")

[node name="BoardB" parent="MainMenuCamera/Boards" unique_id=1066540754 instance=ExtResource("19_5kvh0")]
layout_mode = 0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="." unique_id=1530712542]
_spawnable_scenes = PackedStringArray("uid://d3of633nmkams")
spawn_path = NodePath("../Players")

[node name="Synchroniser" type="MultiplayerSynchronizer" parent="." unique_id=1569656996]
replication_config = SubResource("SceneReplicationConfig_c7wuu")

[node name="Players" type="Node2D" parent="." unique_id=1450767889]
z_index = 102

[connection signal="body_entered" from="Map/InteractablesP1/PlantBitch/Area2D" to="Map/InteractablesP1/PlantBitch" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Map/InteractablesP1/PlantBitch/Area2D" to="Map/InteractablesP1/PlantBitch" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Map/InteractablesP2/BBoards/BoardB1/Area2D" to="Map/InteractablesP2/BBoards/BoardB1" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Map/InteractablesP2/BBoards/BoardB1/Area2D" to="Map/InteractablesP2/BBoards/BoardB1" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Map/InteractablesP2/BBoards/BoardB2/Area2D" to="Map/InteractablesP2/BBoards/BoardB2" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Map/InteractablesP2/BBoards/BoardB2/Area2D" to="Map/InteractablesP2/BBoards/BoardB2" method="_on_area_2d_body_exited"]
[connection signal="pressed" from="MainMenuCamera/MainMenuHUD/Panel/MarginContainer/VBoxContainer/Host Game" to="." method="becomeHost"]
[connection signal="pressed" from="MainMenuCamera/MainMenuHUD/Panel/MarginContainer/VBoxContainer/Join Game" to="." method="joinHostGame"]
